.labs/Local-Kubernetes/mlops/manifests/streamlit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit
spec:
  ingressClassName: traefik
  rules:
    - host: streamlit.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit
                port:
                  number: 8501
